--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,19 @@
 # Site settings
-title: Jekyll-Uno
-description: 'Jekyll-Uno - a minimal, responsive theme for Jekyll'
-url: 'http://joshgerdes.com/jekyll-uno'
-baseurl: '/jekyll-uno/'
+title: rubycoloredglasses
+description: > # this means to ignore newlines until "baseurl:"
+  I am Jason Miller, a web applications developer in the San Francisco Bay area.
+url: 'http://blog.redconfetti.com'
+baseurl: '/'
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 
 author:
-  name: 'Josh Gerdes'
-  email: josh@joshgerdes.com
-  twitter_username: joshgerdes
-  facebook_username: joshgerdes
-  github_username:  joshgerdes
-  linkedin_username:  joshgerdes
+  name: 'Jason Miller'
+  email: jason@redconfetti.com
+  twitter_username: redconfetti
+  facebook_username: redconfetti
+  github_username:  redconfetti
+  linkedin_username:  redconfetti
 
 defaults:
   -
