Adds Delicious profile link support

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ author:
   facebook_username: redconfetti
   github_username:  redconfetti
   linkedin_username:  redconfetti
+  delicious_username: redconfetti
 
 defaults:
   -
