--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: rubycoloredglasses
 description: > # this means to ignore newlines until "baseurl:"
   I'm Jason, a web applications developer in the San Francisco Bay area.
-url: 'http://blog.redconfetti.com'
+url: 'http://www.rubycoloredglasses.com'
 baseurl: '/'
 timezone: America/Los_Angeles
 # google_analytics: 'UA-XXXXXX-X'
