--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: rubycoloredglasses
-description: > # this means to ignore newlines until "baseurl:"
+description: > # this means to ignore newlines until "url:"
   I'm Jason, a web applications developer in the San Francisco Bay area.
 url: 'http://www.rubycoloredglasses.com'
 baseurl: '/'
