--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: rubycoloredglasses
 description: > # this means to ignore newlines until "url:"
   I'm Jason, a web applications developer in the San Francisco Bay area.
 url: 'http://www.rubycoloredglasses.com'
-baseurl: '/'
+baseurl: ''
 timezone: America/Los_Angeles
 
 author:
@@ -36,5 +36,5 @@ kramdown:
   # do not replace newlines by <br>s
   hard_wrap: false
 
-gems: ['jekyll-paginate', 'jekyll-sitemap']
+plugins: ['jekyll-paginate', 'jekyll-sitemap']
 exclude: ['README.md', 'Gemfile', 'Gemfile.lock', 'screenshot.png']
