--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,10 @@ indent_size = 2
 [*.{js,rb,erb,html}]
 charset = utf-8
 
+[*.md]
+max_line_length = 80
+trim_trailing_whitespace = false
+
 [search.json]
 indent_style = tab
 indent_size = 2
