Fixes whitespace created by OpenGraph template tags

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: rubycoloredglasses
 description: > # this means to ignore newlines until "url:"
   I'm Jason, a web applications developer in the San Francisco Bay area.
-url: 'http://www.rubycoloredglasses.com'
+url: 'https://www.rubycoloredglasses.com'
 baseurl: ''
 timezone: America/Los_Angeles
 
