--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,7 @@
 {
-  "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
   "prettier.semi": false,
-  "editor.rulers": [
-    80,
-    120
-  ]
+  "editor.rulers": [80, 120]
 }
